[package]
name = "lampcontrol"
version = "0.1.0"
authors = ["Lisa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#philipshue = "0.3.2"
philipshue = { git = "https://github.com/dskleingeld/philipshue", branch = "master" }
rand = "0.4.0"